// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (sorting) > sorting rules and configs case-insensitive > sorts correctly 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🅰️ Set in the \`a\` configuration.\\
🅱️ Set in the \`B\` configuration.\\
🌊 Set in the \`c\` configuration.

| Name                 | 💼         |
| :------------------- | :--------- |
| [a](docs/rules/a.md) | 🅰️ 🅱️ 🌊 |
| [B](docs/rules/B.md) |            |
| [c](docs/rules/c.md) |            |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (sorting) > sorting rules and configs case-insensitive > sorts correctly 2`] = `
"# test/a

💼 This rule is enabled in the following configs: 🅰️ \`a\`, 🅱️ \`B\`, 🌊 \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) > sorting rules and configs case-insensitive > sorts correctly 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) > sorting rules and configs case-insensitive > sorts correctly 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;
